--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,69 +1,75 @@
-.sidebar{
-    flex: 3;
-    height: calc(100vh - 50px);
-    overflow-y: scroll;
+.sidebar {
+  flex: 3;
+  height: calc(100vh - 50px);
+  overflow-y: scroll;
 }
 
-::-webkit-scrollbar{
-    width: 5px;
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-::-webkit-scrollbar-track{
-    background-color: #f1f1f1;
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
 }
 
-::-webkit-scrollbar-thumb{
-    background-color: rgb(209, 207, 207);
+::-webkit-scrollbar-thumb {
+  background-color: rgb(156, 156, 156);
 }
 
-.sidebarWrapper{
-    padding: 20px;
+.sidebarWrapper {
+  padding: 20px;
 }
 
-.sidebarList{
-    padding: 0;
-    margin: 0;
-    list-style: none;
+.sidebarList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
-.sidebarListItem{
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
+.sidebarListItem {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
-.sidebarIcon{
-    margin-right: 10px;
+.sidebarIcon {
+  margin-right: 10px;
 }
 
-.sidebarButton{
-    width: 150px;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    font-weight: 700;
+.sidebarButton {
+  width: 150px;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-weight: 700;
 }
 
-.sidebarHr{
-    margin: 20px 0;
+.sidebarHr {
+  margin: 20px 0;
 }
 
-.sidebarFriendList{
-    padding: 0;
-    margin: 0;
-    list-style: none;
+.sidebarFriendList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
-.sidebarFriend{
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
+.sidebarFriend {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
-.sidebarFriendImg{
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
+.sidebarFriendImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+@media (min-width: 1440px) {
+  .sidebar {
+    flex: 1.5;
+  }
 }
